--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -64,6 +64,7 @@
 			$("#loginCont").show();
 			$("#loginTab").addClass('selected');
 			$("#getInvitedTab").removeClass('selected');
+			$(".messages").hide();
 			return false;
 		});
 		$("a#getInvitedTab").click(function () {
@@ -71,6 +72,7 @@
 			$("#loginCont").hide();
 			$("#loginTab").removeClass('selected');
 			$("#getInvitedTab").addClass('selected');
+			$(".messages").hide();
 			return false;
 		});
 		
@@ -134,7 +136,7 @@
 	</div>
 	<div style="display:none" id="getInvitedCont">
 	<h2 id="earlyAccess" class="tr">Become a Member</h2>
-	<p>Get invited to the pre-launch sale in Summer 2011. Free shipping within India.</p>
+	<p>Get invited to the pre-launch sale in October 2011. Free shipping within India.</p>
 	<link href="http://my.betali.st/widget/y2jd9dtr.css" rel="stylesheet" /><script src="http://my.betali.st/widget/y2jd9dtr.js" id="MyBetaList"></script>
 	
 	<p class="alignRight">Free membership by invitation only.</p>
