--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -72,13 +72,13 @@ body:before {
 
 #mainNav{
 	float: left;
-	width: 350px;
+	/*width: 350px;*/
 	height:70px;
 	margin: -10px 0px 0px 22px;
 }
 
 #mainNav ul {
-    width: 380px;
+    width: 384px;
 }
 
 #mainNav ul li{
