--- a/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
+++ b/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
@@ -67,7 +67,7 @@
 }
 
 #fancybox-outer {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 100%;
 
@@ -79,7 +79,7 @@
 	height: 0;
 	padding: 0;
 	outline: none;
-	position: absolute;
+	position: relative;
 	overflow: hidden;
 	z-index: 1102;
 	border: 0px solid #111;
