--- a/app/design/frontend/default/rooja/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view/media.phtml
@@ -82,7 +82,7 @@ return false;
 </script>
 
 <?php if (count($_gallery) > 0): ?>
-<div class="more-views">
+<div class="more-views testclass">
     <ul>
     <?php foreach ($_gallery as $_image): ?>
         <li>
