--- a/app/design/frontend/base/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/media.phtml
@@ -65,7 +65,7 @@
 </p>
 <?php endif; ?>
 <?php if (count($this->getGalleryImages()) > 0): ?>
-<div class="more-views">
+<div class="more-views testclass2">
     <h2><?php echo $this->__('More Views') ?></h2>
     <ul>
     <?php foreach ($this->getGalleryImages() as $_image): ?>
