--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -44,7 +44,6 @@ $mainImagePath = '';
 $galleryImages = $this->getGalleryImages();
 if (count($galleryImages) > 0) {
     $gallery = '<div class="more-views">';
-    $gallery .= '<h2>' . $this->__('More Views') . '</h2>';
     $gallery .= '<ul>';
     foreach ($galleryImages as $_image) {
         if ($_image->getFile() == $_product->getData('small_image')) {
@@ -53,7 +52,7 @@ if (count($galleryImages) > 0) {
         $gallery .= '<li>'
                  .  '<a href="' . $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()) . '" '
                  .  'rel="popupWin:\'' . $this->getGalleryUrl($_image) . '\', useZoom: \'cloudZoom\', smallImage: \'' . $this->getCloudImage($this->getProduct(), $_image) .  '\'" class="cloud-zoom-gallery" title="' . $this->htmlEscape($_image->getLabel()) . '">'
-                 .  '<img src="' . $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56) . '" width="56" height="56" alt="' . $this->htmlEscape($_image->getLabel()) . '" />'
+                 .  '<img src="' . $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56,84) . '" width="56" alt="' . $this->htmlEscape($_image->getLabel()) . '" />'
                  .  '</a></li>';
     }
     $gallery .= '</ul></div>';
