--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -31,6 +31,7 @@
 	jQuery(document).ready(function(){
 		jQuery("#cloudZoom").bind("click", function(){return false;});
 		jQuery(".more-views ul li").bind("click", function(){
+			alert("click");
 			jQuery(".more-views ul li").removeClass('selected');
 			jQuery(this).addClass('selected');
 		});
