selected class add

--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -30,7 +30,7 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery("#cloudZoom").bind("click", function(){return false;});
-		jQuery(".more-views ul li").bind("click", function(){
+		jQuery(".more-views ul li").click(function(){
 			alert("click");
 			jQuery(".more-views ul li").removeClass('selected');
 			jQuery(this).addClass('selected');
