--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -104,6 +104,7 @@ P.S. Hurry!"/>
 		</div>
 		</div>
 	</nav>
+	<!--Begin ABOUT section-->
 	<div style="display:none;">
 		<div id="aboutWrapper">
 			<div class="wrapper">
@@ -146,8 +147,47 @@ P.S. Hurry!"/>
 		</section><!--End Content-->
 		</div>
 		</div>
+	</div><!--End ABOUT section-->
+	<!--Begin CONTACT section-->
+	<div style="display:none;">
+		<div id="notifyWrapper">
+		<div class="wrapper">
+		<header id="mainHeader">
+			<h1 id="logo" class="tr">Rooja</h1>
+
+		</header><!--End Header-->
+		<section id="content" class="body static">
+			<h2 id="contactHeader" class="tr">Contact Us</h2>
+			<p>For general inquiries, help &amp; support and press and media requests please use the form below or email us at <a href="mailto:support@rooja.in">support@rooja.in</a>.</p>
+			<form method="post" action="http://clients.actsofphilosophie.com/rooja/contact-submit.php">
+				<label for="yourName">Your Name:</label>
+				<input type="text" id="yourName" name="yourName">
+
+				<label for="email">Your Email:</label>
+				<input type="email" id="email" name="email">
+
+				<label for="subject">Your Subject:</label>
+				<input type="text" id="subject" name="subject">
+
+				<label for="message">Your Message:</label>
+				<textarea id="message" name="message"></textarea>
+
+				<input type="submit" id="submitBtn" value="send">
+			</form>
+
+			<h2 id="socialMedia" class="tr">Social Media</h2>
+			<a href="http://twitter.com/roojafashion" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF" data-show-count="false">Follow @roojafashion</a>
+
+		<fb:like href="http://facebook.com/roojafashion" send="true" width="450" show_faces="true" colorscheme="dark" font="arial"></fb:like>
+
+			<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+			<p class="clear">Don&rsquo;t forget to follow us on <a href="http://facebook.com/roojafashion" target="_blank" title="Join us on Facebook">Facebook</a> and <a href="http://twitter.com/roojafashion" target="_blank" title="Follow us on Twitter">Twitter</a>. We will respond to your tweets and wall posts too!</p>
+		</section><!--End Content-->
+		</div>
+
+		</div>
 	</div>
-	
+	<!--End CONTACT section-->
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
 </html>
