--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -90,7 +90,7 @@ P.S. Hurry!"/>
 			<li><a href="http://rooja.com">Home</a></li>
 			<li><a href="#aboutWrapper" class="fancyboxLink">About</a></li>
 			<li><a href="https://roojacareers.resumetracker.com/public" target="_blank">Careers</a></li>
-			<li><a href="mailto:support@rooja.in">Contact</a></li>
+			<li><a href="#notifyWrapper" class="fancyboxLink">Contact</a></li>
 			<li><a href="http://blog.rooja.com" target="_blank">Blog</a></li>
 		</ul>
 
