--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -163,8 +163,8 @@ P.S. Hurry!"/>
 				<label for="yourName">Your Name:</label>
 				<input type="text" id="yourName" name="yourName">
 
-				<label for="email">Your Email:</label>
-				<input type="email" id="email" name="email">
+				<label for="contactEmail">Your Email:</label>
+				<input type="email" id="contactEmail" name="contactEmail">
 
 				<label for="subject">Your Subject:</label>
 				<input type="text" id="subject" name="subject">
