--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -164,7 +164,7 @@ P.S. Hurry!"/>
 				<input type="text" id="yourName" name="yourName">
 
 				<label for="contactEmail">Your Email:</label>
-				<input type="email" id="contactEmail" name="contactEmail">
+				<input type="text" id="contactEmail" name="contactEmail">
 
 				<label for="subject">Your Subject:</label>
 				<input type="text" id="subject" name="subject">
