--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -169,8 +169,7 @@ P.S. Hurry!"/>
 				<label for="subject">Your Subject:</label>
 				<input type="text" id="subject" name="subject">
 
-				<label for="message">Your Message:</label>
-				<textarea id="message" name="message"></textarea>
+				<textarea id="message" name="message" placeholder="Your Message"></textarea>
 
 				<input type="submit" id="submitBtn" value="send">
 			</form>
