--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -46,7 +46,7 @@ body:before {
 	margin-top:-32767px;}
 
 
-.container{margin: 0 auto;width:980px;padding:0 10px;}
+.container{margin: 0 auto;width:980px;padding:0 10px 0 35px;}
 
 /* ~~~~~ GRID ~~~~~ */
 
