--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
@@ -62,7 +62,7 @@
 			        <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales')): ?>
 			            <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
 			        <?php else: ?>
-			            saf<?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()) ?>
+			            <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()*($_item->getQty())) ?>
 			        <?php endif; ?>				
 			</td>
 			<td>
