--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -107,7 +107,7 @@ if($_category->getId() !=5){
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
             if($c->getIsActive()){ // check if category is active
-				$fivedays = date('y-m-d H:G:00', strtotime("+5 days"));
+				$twodays = date('y-m-d H:G:00', strtotime("+2 days"));
 				$today = date('y-m-d H:G:00');
 				if (!$c->getSale_start_date() == null) {
 	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
@@ -115,7 +115,7 @@ if($_category->getId() !=5){
 
 					//var_dump($c);
 					if(timeBetweenNowAndDeadline($enddate) != 0){
-					if ($enddate > $today && $enddate < $fivedays) {
+					if ($enddate > $today && $enddate < $twodays) {
 						if ($i % 2 == 0){
 						echo '<article class="saleDetails fl noMargin">';
 						} else {
@@ -148,11 +148,11 @@ foreach ($categories as $_category){
 		foreach($_category->getChildren() as $subcategory){
 			$c = Mage::getModel('catalog/category')->load($subcategory->getId());
 			if (!$c->getSale_start_date() == null) {
-				$fivedays = date('y-m-d H:G:00', strtotime("+7 days"));
+				$tendays = date('y-m-d H:G:00', strtotime("+10 days"));
 				$today = date('y-m-d H:G:00');
 				$startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
 				$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
-				if ($startdate > $today && $startdate < $fivedays) {
+				if ($startdate > $today && $startdate < $tendays) {
 					$sortedArrayByDates[strtotime($c->getSale_start_date())][] = $c->getName();
 				}
 			}
