--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -96,23 +96,22 @@
 			});
 
 		 });
-		
-			 // add functionality for the onclicks here
-			  $("#p_method_cashondelivery").click(function() {
-				$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
-				$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
-				
-			
-			  });
-
-			  $("#p_method_Avenues_standard").click(function() {
-				$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
-			   $("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cc.png'); ?>" alt="Security" id="secureLogos">');
-			  });
 
 
 	})(jQuery);
 
+</script>
+<script type="text/javascript">
+	 // add functionality for the onclicks here
+	  jQuery("#p_method_cashondelivery").click(function() {
+		jQuery("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
+		jQuery("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
+	  });
+
+	  jQuery("#p_method_Avenues_standard").click(function() {
+		jQuery("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
+	   jQuery("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cc.png'); ?>" alt="Security" id="secureLogos">');
+	  });
 </script>
 <ol class="opc" id="checkoutSteps">
 <?php 
