--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -61,7 +61,7 @@ P.S. Hurry!"/>
 <?php if(trim(Mage::registry('current_category')->getImageUrl()=="")): ?>
 <meta property="og:image" content="<?php echo $this->getSkinUrl('images/icons/rooja-logo-fb.png') ?>" />
 <?php else: ?>
-<meta property="og:image" content="<?php echo trim(Mage::registry('current_category')->getThumbnailUrl())?>"/>
+<meta property="og:image" content="http://rooja.com/media/catalog/category/<?php echo trim(Mage::registry('current_category')->getThumbnail())?>"/>
 <?php endif; ?>
 <?php endif; ?>
 <?php endif; ?>
