fixed issue with link to rooja logo

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -142,8 +142,10 @@ if (!$categoryIds == null){
 					</div>
 					<?php $catName = $currentcategory->getName(); 
 						$catName = str_replace("'", "\'", $catName);
+						$catName = str_replace('"', '\"', $catName);
 						$saleName = $_helper->productAttribute($_product, $_product->getName(), 'name');
 						$saleName = str_replace("'", "\'", $saleName);
+						$saleName = str_replace('"', '\"', $saleName);
 					?>
 					<script type="text/javascript">
 						var addthis_config = {"data_track_clickback":true};
