--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -46,11 +46,11 @@
 			
 			$("input[@name='payment[method]']").click(function() {
 				
-				if('#p_method_cashondelivery').is(':checked')) { 
+				if($('#p_method_cashondelivery').is(':checked')) { 
 					$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
 					$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
 					}
-				if('#p_method_Avenues_standard').is(':checked')) { 
+				if($('#p_method_Avenues_standard').is(':checked')) { 
 						$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
 						$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cc.png'); ?>" alt="Security" id="secureLogos">');
 				}
