--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -44,7 +44,7 @@
 				$("#checkoutStep2").show();
 			});*/
 			
-			$("input[@name='payment[method]']").click(function() {
+			$("#co-payment-form input").click(function() {
 				
 				if($('#p_method_cashondelivery').is(':checked')) { 
 					$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
