--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -43,7 +43,7 @@
 			$("#s_method_flatrate_flatrate").click(function() {
 				$("#checkoutStep2").show();
 			});*/
-			
+			console.log('here');
 			$("#co-payment-form input").change(function() {
 				
 				console.log('change', $(this));
