--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -44,6 +44,7 @@
 				$("#checkoutStep2").show();
 			});*/
 			console.log('here');
+			alert('hey');
 			$("#co-payment-form input").change(function() {
 				
 				console.log('change', $(this));
