--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -181,6 +181,33 @@ foreach ($sortedArrayByDates as $date => $array)
 }
 ?>
 		</section>
+
+		<section id="boutiquesHome" class="clear">
+			<h2>Boutiques</h2>
+			<?php 
+			$i = 1;
+			$categories = Mage::helper('catalog/category')->getStoreCategories();
+			foreach ($categories as $_category){
+			    if($_category->hasChildren()){
+			        $_category->getId(); // category id
+					if($_category->getId() ==5){
+			        foreach($_category->getChildren() as $subcategory){
+					$c = Mage::getModel('catalog/category')->load($subcategory->getId());
+			            if($c->getIsActive()){ // check if category is active
+						
+								
+									echo '<article class="saleDetails fl">';
+									
+									echo '<a href="'. $c->getURL() .'"><span><img src="/media/catalog/category/'. $c->getImage() .'"></span></a>';
+									echo '<h3><a href="'. $c->getURL() .'">' . $c->getName() . '</a></h3>';
+									$i++;
+			            }
+			        }
+			}
+			    }
+			}
+			?>
+		</section>
 	</div>
 </section>
 <script>
