--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -598,6 +598,8 @@ h3 .product-name {
 .upcomingDate h4{padding:0 0 8px;border-bottom:1px solid #555;margin-bottom:8px;}
 .upcomingDate ul li{font-size:1.3em;padding-bottom:2px;line-height:1.1em;}
 
+#boutiquesHome{margin-top:15px;}
+
 /* ~~~~~ SALES  ~~~~~ */
 #saleInfo{padding-top:25px;}
 #saleInfo h1{margin-bottom:20px;}
