--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -181,7 +181,7 @@ foreach ($sortedArrayByDates as $date => $array)
 }
 ?>
 		</section>
-
+<br class="clear" />
 		<section id="boutiquesHome" class="clear">
 			<h2>Boutiques</h2>
 			<?php 
