--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -395,9 +395,8 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 			   dataType: "json",
 			   success: function(data){
 				 jQuery('#likeThis').find('span:last').text(data.numLikes);
-				var updatedPrice = <?php $newPrice = 'data.newPrice';echo number_format($newPrice, 2); ?>
-                 //jQuery('.currentPrice').find('span:last').text(' ' + (data.newPrice));
-				jQuery('.currentPrice').find('span:last').text(' ' + (updatedPrice));
+				
+                 jQuery('.currentPrice').find('span:last').text(' ' + (data.newPrice));
 				
                },
                error: function(x){
