--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -396,7 +396,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 			   success: function(data){
 				 jQuery('#likeThis').find('span:last').text(data.numLikes);
 				
-                 jQuery('.currentPrice').find('span:last').text(' ' + (data.newPrice));
+                 jQuery('.currentPrice').find('span:last').text(' ' + formatCurrency(data.newPrice));
 				
                },
                error: function(x){
