--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -357,7 +357,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 </section>
 <?php if($boutique==0){ ?>
 <script type="text/javascript">
-function toCurrency(num) {
+function formatCurrency(num) {
   var sign;
   var cents;
   var i;
