rs instead of dollar sign

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -362,7 +362,7 @@ function formatCurrency(num) {
   var cents;
   var i;
 
-  num = num.toString().replace(/\$|\,/g, '');
+  num = num.toString().replace(/\Rs.|\,/g, '');
   if (isNaN(num)) {
     num = "0";
   }
